--- a/service-registry.yml
+++ b/service-registry.yml
@@ -7,8 +7,8 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-spring:
-  application:
-    name: SERVICE-REGISTRY
-  config:
-    import: configserver:http://localhost:9296
+# spring:
+#   application:
+#     name: SERVICE-REGISTRY
+#   config:
+#     import: configserver:http://localhost:9296
